# GridWright

./: .gitignore  CLAUDE.md  Dockerfile  GridWrightBuildSpec.md  GridWrightV2.md  README.md  compounds.json  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/app/: db.py  main.py  models.py  slugs.py  wordlists.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx  state.ts
frontend/src/api/: client.ts
frontend/src/engine/: compounds.ts  expand.ts  index.ts  ph.ts  screen.ts  types.ts  units.ts  well.ts
frontend/src/engine/__tests__/: compounds.test.ts  fixture.test.ts  hello.test.ts
frontend/src/ui/: App.css  App.tsx  CompoundAutocomplete.tsx  HelpModal.tsx  PlatePreview.tsx  PrepList.tsx  PrintWorksheet.tsx  WellDetail.tsx  exports.ts  formatters.ts
frontend/src/ui/wizard/: Step1Geometry.tsx  Step2Axes.tsx  Step3Constants.tsx
