[tool.poetry]
name = "gridwright-backend"
version = "0.1.0"
description = "GridWright persistence backend"
package-mode = false
authors = ["Jan Gebauer <jan@gebauer.koeln>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.111.1"
uvicorn = {extras = ["standard"], version = ">=0.30.1"}
pydantic = ">=2.7.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
